# ocaml-playground

./: .gitignore  README.md
enumerable/: README.md  main.ml
getting-started/: README.md
getting-started/hello/lib/: dune  en.mli  pt.ml
getting-started/minimo/: minimo.ml
interpreter/: README.md  dune-project
interpreter/lib/: ast.ml  parser.mly
real-world-ocaml/chapter18-handling-json-data/: book.json  dune-project
real-world-ocaml/chapter18-handling-json-data/lib/: dune
real-world-ocaml/chapter18-handling-json-data/test/: dune
real-world-ocaml/chapter19-ocamllex-and-menhir/: dune-project  json_parser.opam  snippet.json
real-world-ocaml/chapter19-ocamllex-and-menhir/lib/: dune  json.ml  json_parser.ml  lexer.mll
shift-reduce/: dune-project  shift-reduce.opam
shift-reduce/lib/: ast.ml  dune  lexer.mll  parser.mly
shift-reduce/test/: dune
