(lang dune 3.16)

(name json_parser)

(generate_opam_files true)

(source
 (gitlab bitmaybewise/ocaml-playground))

(authors "@bitmaybewise")

(maintainers "@bitmaybewise")

(license LICENSE)

(package
 (name json_parser)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends ocaml dune core)
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html

(using menhir 3.0)
